# bit

./: .editorconfig  .gitignore  .travis.yml  CMakeLists.txt  DRAFT.md  DRAFT.txt  E5R.Bit.sln  IDEA.md  README.md  appveyor.yml  build-coreclr.ps1  build-coreclr.sh  build.cake  build.cmd  build.ps1  run.cmd
docs/: contributing.md  contribution-workflow.md  develope-guide.md  developer-guide.md  issue-guide.md  issue_template.md
docs/issue_template/: bug.md  bug_doc.md  proposal.md
docs/tutorials/: building-shell-requirements.md  building-shell.md  building.md  configuring-vscode-environment.md
src/E5R.Sdk.Bit/: BitCommand.cs  E5R.Sdk.Bit.csproj
src/E5R.Sdk.Bit/Command/: BitCommand.cs  BitCommandContext.cs  BitCommandResult.cs  BitContext.cs  BitResult.cs  IBitCommand.cs
src/E5R.Sdk.Bit/Extensions/: ByteExtensions.cs  EnumExtensions.cs  StringExtensions.cs
src/E5R.Sdk.Bit/Properties/: AssemblyInfo.cs
src/E5R.Sdk.Bit/Services/: BitConfiguration.cs  IBitConfiguration.cs
src/E5R.Sdk.Bit/Services.Abstractions/: IBitCommand.cs  IBitConfiguration.cs  IBitDiscovery.cs  IBitEnvironment.cs
src/E5R.Sdk.Bit/Utils/: BitUri.cs  BitUriScheme.cs
src/E5R.Tools.Bit/: BitContainer.cs  BitEnvironment.cs  E5R.Tools.Bit.csproj  Program.cs
src/E5R.Tools.Bit.Engine/: BitEngine.cs  BitOutput.cs  DependencyInjectionContainer.cs  E5R.Tools.Bit.Engine.csproj  EmbeddedResourceLoader.cs
src/E5R.Tools.Bit.Engine/Compiler/: CSharpCompiler.cs  IBitCompiler.cs
src/E5R.Tools.Bit.Engine/Compilers/: CSharpCompiler.cs  IBitCompiler.cs
src/E5R.Tools.Bit.Engine/DI/: BitEngineContainer.cs  DependencyInjectionContainer.cs
src/E5R.Tools.Bit.Engine/Properties/: AssemblyInfo.cs
src/E5R.Tools.Bit.Engine/Services/: BitConfiguration.cs  BitDiscovery.cs  BitEnvironment.cs
src/E5R.Tools.Bit.Shell/: CMakeLists.txt  main.cpp
src/E5R.Tools.Bit.Shell/include/: config.hpp  config.hpp.in
src/E5R.Tools.Bit.Shell/include/bit-shell/: config.hpp  config.hpp.in
src/E5R.Tools.Bit.Shell/include/e5r/tools/: bit.hpp  bit.hpp.in
src/E5R.Tools.Bit/Properties/: AssemblyInfo.cs
test/E5R.Sdk.Bit.Test/: BitCommandTests.cs  BitUriTests.cs  ByteExtensionsTests.cs  E5R.Sdk.Bit.Test.csproj  EnumExtensionsTests.cs  StringExtensionsTests.cs
test/E5R.Sdk.Bit.Test/Extensions/: ByteExtensionsTests.cs  EnumExtensionsTests.cs  StringExtensionsTests.cs
test/E5R.Sdk.Bit.Test/Utils/: BitUriTests.cs
test/E5R.Test.Commons/: E5R.Test.Commons.csproj  TraitConstants.cs
test/E5R.Test.Utils/: E5R.Test.Utils.csproj  TraitConstants.cs
test/E5R.Tools.Bit.Engine.Test/: BitEngineTests.cs  BitOutputTests.cs  DependencyInjectionContainerTests.cs  E5R.Tools.Bit.Engine.Test.csproj  EmbeddedResourceLoaderTests.cs
test/E5R.Tools.Bit.Engine.Test/Compilers/: CSharpCompilerTests.cs
test/E5R.Tools.Bit.Engine.Test/DI/: DependencyInjectionContainerTests.cs
test/E5R.Tools.Bit.Engine.Test/Resources/: InvalidCSharpCode.csx  ValidCSharpCode.csx
test/E5R.Tools.Bit.Test/: E5R.Tools.Bit.Test.csproj  ProgramTests.cs
